Rename mock IU property